[package]
name = "wasmcloud-control-interface"
version = "0.16.0-alpha-1.0" # was 0.15.0
authors = ["wasmCloud Team"]
edition = "2021"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmCloud/control-interface-client"
description = "This library, when combined with a NATS client, allows interaction with the lattice control interface"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-control-interface"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "control", "ctl"]
categories = ["wasm", "api-bindings"]

[dependencies]
async-trait = "0.1"
async-nats = "0.14.0"
data-encoding = "2.3.1"
cloudevents-sdk = "0.4.0"
futures = "0.3"
ring = "0.16.20"
rmp-serde = "1.0.0"
tokio = {version="1.9", features=["time"]}
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tracing = "0.1.35"
uuid = {version = "1.0.0", features  = ["serde", "v4"]}
wascap = "0.8.0"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "81e16d7aeb5839d1929827291718b8d037f15d54", features = ["otel"] }
wasmcloud-interface-lattice-control = { git = "https://github.com/wasmcloud/interfaces", rev = "c67ae9eeb69ec12607de9e4349a0c1c35f415a5f" }
